c4prj2_input/grade.txt
Grading at Sat 07 Oct 2023 03:26:01 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:47:38: error: ‘deck_t’ {aka ‘struct deck_tag’} has no member named ‘value’
   47 |       currD.cards[j]->value = deck[i].value;
      |                                      ^
future.c:48:37: error: ‘deck_t’ {aka ‘struct deck_tag’} has no member named ‘suit’
   48 |       currD.cards[j]->suit = deck[i].suit;
      |                                     ^
Compilation of future.c failed

Overall Grade: F
